Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
-
-          <h2>HAPPY</h2>
+            <span>
+             <h2>HAPPY</h2>
+            </span>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
