--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
-            <span>
+            <span class="front">
              <h2>HAPPY</h2>
             </span>
 
