--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
-        <img src=""
+        <img src="images/columbia-logo.jpg" alt=""
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
