--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <img src="images/columbia-logo.png" alt="columbia-logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        
+        <span></span>
 
         <br>
 
