--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         
-        <span>PHARRELLWILLIAMS.COM</span>
+        <p><span>PHARRELLWILLIAMS.COM</span></p>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
