--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
         
-        <span>COLUMBIARECORDS.COM</span>
+        <p><span>COLUMBIARECORDS.COM</span></p>
 
         <br>
 
