--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel=""
   </head>
   <body>
     <div class="wrapper">
