--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href=""
+    <link rel="stylesheet" href="fonts/'Avenir Next Condensed">
   </head>
   <body>
     <div class="wrapper">
