--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         
-        <span><img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo"></span>
+        <img src="images/columbia-logo.png" alt="columbia-logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
         
